fix(pci-users): css issues on mobile version ref: DTCORE-2035

--- a/packages/manager/apps/pci-users/src/index.css
+++ b/packages/manager/apps/pci-users/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .application {
-  @apply mx-11 mt-8;
+  @apply mx-4 md:mx-12 mt-8;
 }
 
 code {
